--- a/cliente/manifest.json
+++ b/cliente/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Filesystem Access Sample",
+    "name": "Sima-OnyOff 0.3",
     "version": "2.1",
     "manifest_version": 2,
     "minimum_chrome_version": "31",
